# resilient-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: example_api_discovery.py  example_basic.py  example_discover_api.py  example_fingerprint_check.py
resilient_scraper/: __init__.py  __main__.py  config.py  discover.py  export.py  fetcher.py  layers.py  proxies.py  result.py  utils.py
